# ConveyorVision

./: CMakeLists.txt  README.md  gitignore  main.cpp
.github/workflows/: build.yaml
datasets/flower_dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
datasets/flower_dataset/test/labels/: 983ed927edb45009_jpg.rf.e927aba71f2bdcb1a21494dcf4e3d3f9.txt  9846d1dc36e51fac_jpg.rf.ed1100869d39ae29798b572cc6d704d9.txt  9859db6564b7f5a4_jpg.rf.66bedb54b91864c5e95c02b2edeadafc.txt  9878b4b024a99a40_jpg.rf.62d8fa69921c927fbb7e79266e203b78.txt  987ac95183b886de_jpg.rf.986927631f9f3b46492e9f905803455e.txt  9890b52cdde07d88_jpg.rf.f59390f15a1b94f40784641b2a76cb7d.txt  98bb7150f497407a_jpg.rf.c3d6e26286942a5fbc1f8b8779b6ef87.txt  98c88fb4fd54b652_jpg.rf.b4de52399e99dc611982eaae46cc63f3.txt  98f2055f4add8afb_jpg.rf.b7d57b459f90835a20e5f8ce71670ce6.txt  98fba93b14b9c676_jpg.rf.4a4f067564db33edb2cf86d49e1a130b.txt  99109caa8c44ac1e_jpg.rf.87b4519d489495cc9b45531d0d85d2f8.txt  9933bcaec6324ea0_jpg.rf.4234804e2c0f2a8ce41f634d7415f93e.txt  99385fd5ac8c09e6_jpg.rf.fe37a553bc7686042af15da7ac80020f.txt  994961ac721fbf14_jpg.rf.7f6e6378ca69ad9703dbd8a0a6822ee6.txt  994cb633302687c5_jpg.rf.ad1e54288c352f1b6a93f63631f076c7.txt  994e990096cfca54_jpg.rf.24f395e33e983a98b476c0f6053f1da7.txt  996bff580f820162_jpg.rf.d5d6f71475b60bad9174ab138d3371ac.txt  999185c3bdc39654_jpg.rf.64fbc2f2da77005d673f20dbfba09596.txt  99af3e455cfdae2c_jpg.rf.dddbef63293fb13a9d5d63b6b5450add.txt  99e0e54b50758f9e_jpg.rf.da6f4355185089a5727ed4032c166539.txt  99e8ac89c009d056_jpg.rf.cec5c6f30aab1063f3690a884c87a5fc.txt  99eb9aea8ce1c156_jpg.rf.44035528d334e68ffa5e245f7677cafc.txt  9a1d24815fb2a299_jpg.rf.bcfd9e89092a4106a6b622587ae35e14.txt  9a4ce5df68ac2734_jpg.rf.fe2d5e142abb38e17393e7127b1443cb.txt  9a4e46dc87620d4a_jpg.rf.43fa430b82ca7e5c1394f83322a00002.txt  9a5008c1082c6964_jpg.rf.af09ee602cbfaaab9e0d2b285fa9d6e9.txt  9a6a59fb06056598_jpg.rf.3303371f35e9b27f005421aa2694db72.txt  9a7948622b03e3f5_jpg.rf.d5526574db3288ee85a7047c8ec0aee5.txt  9a79fa442587a5c7_jpg.rf.632e594cd9e4d90ec58966d59caf70c0.txt  9abc2d634c35d1ee_jpg.rf.0aa61e0010182709048edee70b5d0a76.txt  9ac022a7978d0086_jpg.rf.422ea19cf70cbca31c9cfbf88b984cb8.txt  9ac7b4afdd3f7142_jpg.rf.3d5f82b1bc4246c2308291f0fdf103fc.txt  (+151 more)
datasets/flower_dataset/train/: labels.cache
datasets/flower_dataset/valid/: labels.cache
include/: Application.hpp  Blurring.hpp  CameraProcessor.hpp  EdgeDetector.hpp  ImageLoader.hpp  ImageProcessor.hpp  InferenceEngine.hpp  ThresholdProcessor.hpp  morphoFilter.hpp
python/: conveyor_config.yaml  requirements.txt  train.py
runs/detect/train/: args.yaml  results.csv
runs/obb/train/: args.yaml
runs/obb/train2/: args.yaml
runs/obb/train3/: args.yaml
runs/obb/train4/: args.yaml
src/: Application.cpp  CameraProcessor.cpp  EdgeDetector.cpp  GaussianBlur.cpp  ImageLoader.cpp  InferenceEngine.cpp  MorphologicalFiltering.cpp  ThresholdProcessor.cpp
(+1646 files in other folders)
